--- a/about.html
+++ b/about.html
@@ -724,7 +724,7 @@
 
 
 
-    <!-- Footer Start -->
+        <!-- Footer Start -->
     <!-- Awards Section (Auto Scrolling) -->
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
@@ -754,7 +754,6 @@
                 <img src="img/logo1.png" alt="Awards" class="award-img">
                 <img src="img/logo1.png" alt="Awards" class="award-img">
                 <img src="img/logo1.png" alt="Awards" class="award-img">
-
             </div>
         </div>
     </section>
@@ -765,17 +764,49 @@
             white-space: nowrap;
             position: relative;
             width: 100%;
+            /* Optional: Add background color or padding if needed */
+        }
+
+        /* Fade effects on edges */
+        .awards-slider::before,
+        .awards-slider::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            width: 150px;
+            /* Width of the fade */
+            height: 100%;
+            z-index: 2;
+        }
+
+        .awards-slider::before {
+            left: 0;
+            background: linear-gradient(to right, white, transparent);
+        }
+
+        .awards-slider::after {
+            right: 0;
+            background: linear-gradient(to left, white, transparent);
         }
 
         .awards-track {
             display: inline-flex;
             gap: 80px;
-            animation: scrollAwards 30s linear infinite;
+            /* Space between logos */
+            animation: scrollAwards 40s linear infinite;
+            /* Increased time for smoother slow scroll */
+        }
+
+        /* Pause animation on hover */
+        .awards-slider:hover .awards-track {
+            animation-play-state: paused;
         }
 
         .award-img {
             height: 110px;
             object-fit: contain;
+            flex-shrink: 0;
+            /* Prevent shrinking */
         }
 
         @keyframes scrollAwards {
@@ -784,54 +815,8 @@
             }
 
             100% {
+                /* Move by half the width of the track (since we duplicated the content) */
                 transform: translateX(-50%);
-            }
-        }
-
-        /* About Image Animation Styles */
-        .about-image-animated {
-            animation: fadeInScale 1.2s ease-out forwards, floatImage 6s ease-in-out 1.2s infinite;
-            transform-origin: center;
-        }
-
-        @keyframes fadeInScale {
-            0% {
-                opacity: 0;
-                transform: scale(0.9);
-            }
-
-            100% {
-                opacity: 1;
-                transform: scale(1);
-            }
-        }
-
-        @keyframes floatImage {
-
-            0%,
-            100% {
-                transform: translateY(0) scale(1);
-            }
-
-            50% {
-                transform: translateY(-10px) scale(1.02);
-            }
-        }
-
-        /* Hover effect for about image */
-        .about-image-animated:hover {
-            animation: fadeInScale 1.2s ease-out forwards, floatImageHover 0.8s ease-in-out infinite;
-        }
-
-        @keyframes floatImageHover {
-
-            0%,
-            100% {
-                transform: translateY(-5px) scale(1.02);
-            }
-
-            50% {
-                transform: translateY(-15px) scale(1.05);
             }
         }
     </style>
@@ -937,8 +922,8 @@
                     <h5 class="fw-bold mb-3">Traveler Assistance</h5>
                     <p style="font-size: 0.9em; color: #555; margin-bottom: 0.5rem;">All numbers operate in EAT – UTC +3
                     </p>
-                    <p><i class="fa fa-phone me-2"></i>+255 123 456 789</p>
-                    <p><i class="fa fa-phone me-2"></i>+255 755 252 956</p>
+                    <p><i class="fa fa-phone me-2"></i>+255 796 440 555</p>
+                    <p><i class="fa fa-phone me-2"></i>+255 762 008 009</p>
                     <p><i class="fa fa-phone me-2"></i>+255 717 647 994</p>
                 </div>
 
@@ -946,22 +931,22 @@
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3">Follow Us</h5>
                     <div class="d-flex gap-3 fs-4">
-                        <a href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr" style="color: #d4a017;"><i
+                        <a href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr"><i
                                 class="fab fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/kilimora.adventure?igsh=cjVjaTV4dTZzZXk2"
-                            style="color: #d4a017;"><i class="fab fa-instagram"></i></a>
-                        <a href="#" style="color: #d4a017;"><i class="fab fa-pinterest"></i></a>
-                        <a href="#" style="color: #d4a017;"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.tiktok.com/@kilimora_adventure?_r=1&_t=ZS-92vfi2bYN0b"
-                            style="color: #d4a017;"><i class="fab fa-tiktok"></i></a>
-                        <a href="#" style="color: #d4a017;"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" style="color: #d4a017;"><i class="fab fa-x-twitter"></i></a>
+                        <a href="https://www.instagram.com/kilimora.adventure?igsh=cjVjaTV4dTZzZXk2"><i
+                                class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-pinterest"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.tiktok.com/@kilimora_adventure?_r=1&_t=ZS-92vfi2bYN0b"><i
+                                class="fab fa-tiktok"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="#"><i class="fab fa-x-twitter"></i></a>
                     </div>
                 </div>
 
             </div>
 
-            <div class="text-center mt-4 py-3" style="color:#4B2E18;">
+            <div class="text-center mt-4 py-3" style="color:#777;">
                 © 2025 Kilimora Adventures — All Rights Reserved
             </div>
 
