--- a/contact.html
+++ b/contact.html
@@ -413,7 +413,7 @@
     </div>
     <!-- Contact End -->
 
-    <!-- Footer Start -->
+        <!-- Footer Start -->
     <!-- Awards Section (Auto Scrolling) -->
     <section class="py-5" style="background:#fff;">
         <div class="container text-center mb-4">
@@ -425,24 +425,24 @@
         <div class="awards-slider">
             <div class="awards-track">
                 <!-- Original Set -->
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
 
                 <!-- Duplicate Set for Seamless Loop -->
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
-                <img src="img/logo.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
+                <img src="img/logo1.png" alt="Awards" class="award-img">
             </div>
         </div>
     </section>
@@ -504,6 +504,7 @@
             }
 
             100% {
+                /* Move by half the width of the track (since we duplicated the content) */
                 transform: translateX(-50%);
             }
         }
@@ -600,28 +601,33 @@
                 <!-- Contact -->
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3">Contact</h5>
-                    <p><i class="fa fa-map-marker-alt me-2"></i>Arusha â€“ Nairobi Road Sakina kwa Idd House no. 80 P.O
-                        Box 7337 Arusha, Tanzania</p>
+                    <p><i class="fa fa-map-marker-alt me-2"></i>Location: Usariver, Arusha,Tanzania</p>
+                    <p><i class="fa fa-road me-2"></i>Street/Road: Mandela Road</p>
+                    <p><i class="fa fa-landmark me-2"></i>Landmark: Near Kennedy House</p>
                 </div>
 
                 <!-- Traveler Assistance -->
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3">Traveler Assistance</h5>
-                    <p><i class="fa fa-phone me-2"></i>+255 715 636 967 (EAT â€“ UTC +3)</p>
-                    <p><i class="fa fa-phone me-2"></i>+256 767 828 384 (EAT â€“ UTC +3)</p>
-                    <p><i class="fa fa-phone me-2"></i>+255 753 090 908 (PHT â€“ UTC +8)</p>
-                    <p><i class="fa fa-envelope me-2"></i>info@Kilimorasafaris.com</p>
+                    <p style="font-size: 0.9em; color: #555; margin-bottom: 0.5rem;">All numbers operate in EAT – UTC +3
+                    </p>
+                    <p><i class="fa fa-phone me-2"></i>+255 796 440 555</p>
+                    <p><i class="fa fa-phone me-2"></i>+255 762 008 009</p>
+                    <p><i class="fa fa-phone me-2"></i>+255 717 647 994</p>
                 </div>
 
                 <!-- Social Icons -->
                 <div class="col-lg-4">
                     <h5 class="fw-bold mb-3">Follow Us</h5>
                     <div class="d-flex gap-3 fs-4">
-                        <a href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr"><i class="fab fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/kilimora.adventure?igsh=cjVjaTV4dTZzZXk2"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/share/1GWydnMmsK/?mibextid=wwXIfr"><i
+                                class="fab fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/kilimora.adventure?igsh=cjVjaTV4dTZzZXk2"><i
+                                class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-pinterest"></i></a>
                         <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.tiktok.com/@kilimora_adventure?_r=1&_t=ZS-92vfi2bYN0b"><i class="fab fa-tiktok"></i></a>
+                        <a href="https://www.tiktok.com/@kilimora_adventure?_r=1&_t=ZS-92vfi2bYN0b"><i
+                                class="fab fa-tiktok"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-x-twitter"></i></a>
                     </div>
@@ -630,7 +636,7 @@
             </div>
 
             <div class="text-center mt-4 py-3" style="color:#777;">
-                Â© 2025 Kilimora Adventures â€” All Rights Reserved
+                © 2025 Kilimora Adventures — All Rights Reserved
             </div>
 
         </div>
