--- a/destination-kilimanjaro.html
+++ b/destination-kilimanjaro.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Serengeti National Park - Kilimora Adventures</title>
+    <title>Mount Kilimanjaro - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords">
-    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
+    <meta content="Kilimanjaro, Mountain, Climbing, Hiking, Tanzania" name="keywords">
+    <meta content="Conquer Africa's highest peak, Mount Kilimanjaro, standing at 5,895 meters above sea level."
         name="description">
 
     <!-- Favicon -->
@@ -345,13 +345,11 @@
         <div class="container py-5">
             <div class="row justify-content-start py-5">
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
-                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">KILIMANJARO
+                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">MOUNT KILIMANJARO
                         DESTINATIONS</h6>
-                    <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">KILIMANJARO</h1>
+                    <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">MOUNT KILIMANJARO</h1>
                     <p class="fs-6 text-white mb-4 animated slideInDown">
-                        Experience kilimanjaro, where the Great Migration roams wild, the sands of Zanzibar beckon, and
-                        the
-                        majestic Mount Kilimanjaro rises above it all.
+                        Conquer Africa's highest peak, Mount Kilimanjaro, standing majestically at 5,895 meters above sea level.
                     </p>
                 </div>
             </div>
@@ -375,16 +373,10 @@
                     <div class="h-100">
                         <div class="d-flex align-items-center mb-4">
                             <span class="section-title-line"></span>
-                            <h2 class="mb-0">About Kilimanjaro</h2>
+                            <h2 class="mb-0">About Mount Kilimanjaro</h2>
                         </div>
-                        <p class="mb-4">The Kilimanjaro National Park is a Tanzanian national park in the Serengeti
-                            ecosystem in the Mara and Simiyu regions. It is famous for its annual migration of over 1.5
-                            million white-bearded (or brindled) wildebeest and 250,000 zebra and for its numerous Nile
-                            crocodile and honey badger.</p>
-                        <p class="mb-4">It is one of the Seven Natural Wonders of Africa. The park covers 14,750 square
-                            kilometres (5,700 sq mi) of grassland plains, savanna, riverine forest, and woodlands. The
-                            park lies in northwestern Tanzania, bordered to the north by the Kenyan border, where it is
-                            continuous with the Maasai Mara National Reserve.</p>
+                        <p class="mb-4">Mount Kilimanjaro is Africa's highest mountain, standing at 5,895 meters (19,341 feet) above sea level. Located in northeastern Tanzania, this dormant volcano is one of the world's most accessible high summits and attracts thousands of climbers each year.</p>
+                        <p class="mb-4">The mountain has three volcanic cones: Kibo, Mawenzi, and Shira. Kilimanjaro is a UNESCO World Heritage Site and offers several climbing routes, each providing unique experiences and varying difficulty levels. The climb takes you through five distinct climate zones, from tropical rainforest to arctic summit.</p>
                     </div>
                 </div>
             </div>
@@ -402,8 +394,8 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="icon-box text-center">
                         <i class="fa fa-paw"></i>
-                        <h5>The Great Migration</h5>
-                        <p class="mb-0">Witness millions of wildebeest and zebra on their annual trek.</p>
+                        <h5>Uhuru Peak</h5>
+                        <p class="mb-0">Reach the highest point in Africa at 5,895 meters.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -416,8 +408,8 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="icon-box text-center">
                         <i class="fa fa-globe"></i>
-                        <h5>Endless Plains</h5>
-                        <p class="mb-0">Vast savannas that stretch as far as the eye can see.</p>
+                        <h5>Five Climate Zones</h5>
+                        <p class="mb-0">Experience diverse ecosystems from rainforest to arctic.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
@@ -443,7 +435,7 @@
         <div class="container">
             <div class="d-flex align-items-center mb-5">
                 <span class="section-title-line"></span>
-                <h2 class="mb-0">Experience Serengeti's Top Tours</h2>
+                <h2 class="mb-0">Experience Kilimanjaro's Top Tours</h2>
             </div>
             <div class="owl-carousel testimonial-carousel">
                 <!-- Tour Item 1 -->
