--- a/destination-manyara.html
+++ b/destination-manyara.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Kilimora</title>
+    <title>Lake Manyara National Park - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords">
-    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
+    <meta content="Lake Manyara, Tree-climbing Lions, Flamingos, Safari, Tanzania" name="keywords">
+    <meta content="Discover Lake Manyara National Park, famous for tree-climbing lions and spectacular birdlife."
         name="description">
 
     <!-- Favicon -->
@@ -345,13 +345,11 @@
         <div class="container py-5">
             <div class="row justify-content-start py-5">
                 <div class="col-lg-6 pt-lg-5 mt-lg-5 text-start">
-                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">SERENEGETI
+                    <h6 class="text-white mb-2 animated slideInDown" style="letter-spacing: 2px;">LAKE MANYARA
                         DESTINATIONS</h6>
-                    <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">SERENGETI</h1>
+                    <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">LAKE MANYARA</h1>
                     <p class="fs-6 text-white mb-4 animated slideInDown">
-                        Experience Serenegeti, where the Great Migration roams wild, the sands of Zanzibar beckon, and
-                        the
-                        majestic Mount Kilimanjaro rises above it all.
+                        Discover Lake Manyara National Park, famous for its unique tree-climbing lions and vibrant flamingo populations.
                     </p>
                 </div>
             </div>
@@ -375,16 +373,10 @@
                     <div class="h-100">
                         <div class="d-flex align-items-center mb-4">
                             <span class="section-title-line"></span>
-                            <h2 class="mb-0">About Serengeti</h2>
+                            <h2 class="mb-0">About Lake Manyara</h2>
                         </div>
-                        <p class="mb-4">The Serengeti National Park is a Tanzanian national park in the Serengeti
-                            ecosystem in the Mara and Simiyu regions. It is famous for its annual migration of over 1.5
-                            million white-bearded (or brindled) wildebeest and 250,000 zebra and for its numerous Nile
-                            crocodile and honey badger.</p>
-                        <p class="mb-4">It is one of the Seven Natural Wonders of Africa. The park covers 14,750 square
-                            kilometres (5,700 sq mi) of grassland plains, savanna, riverine forest, and woodlands. The
-                            park lies in northwestern Tanzania, bordered to the north by the Kenyan border, where it is
-                            continuous with the Maasai Mara National Reserve.</p>
+                        <p class="mb-4">Lake Manyara National Park is a protected area in Tanzania's Arusha and Manyara Regions, covering an area of 325 square kilometers. The park is famous for its unique tree-climbing lions and large flocks of flamingos that paint the lake pink.</p>
+                        <p class="mb-4">The park offers a diverse landscape including groundwater forests, acacia woodlands, and the alkaline soda lake itself. It is home to over 400 bird species and provides excellent opportunities for birdwatching and photography. The park also hosts elephants, hippos, giraffes, and various antelope species.</p>
                     </div>
                 </div>
             </div>
@@ -402,8 +394,8 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="icon-box text-center">
                         <i class="fa fa-paw"></i>
-                        <h5>The Great Migration</h5>
-                        <p class="mb-0">Witness millions of wildebeest and zebra on their annual trek.</p>
+                        <h5>Tree-Climbing Lions</h5>
+                        <p class="mb-0">Witness the rare sight of lions resting in acacia trees.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -416,8 +408,8 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="icon-box text-center">
                         <i class="fa fa-globe"></i>
-                        <h5>Endless Plains</h5>
-                        <p class="mb-0">Vast savannas that stretch as far as the eye can see.</p>
+                        <h5>Flamingo Spectacle</h5>
+                        <p class="mb-0">Thousands of flamingos create a pink carpet on the lake.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
@@ -443,7 +435,7 @@
         <div class="container">
             <div class="d-flex align-items-center mb-5">
                 <span class="section-title-line"></span>
-                <h2 class="mb-0">Experience Serengeti's Top Tours</h2>
+                <h2 class="mb-0">Experience Lake Manyara's Top Tours</h2>
             </div>
             <div class="owl-carousel testimonial-carousel">
                 <!-- Tour Item 1 -->
