--- a/destination-mikumi.html
+++ b/destination-mikumi.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Serengeti National Park - Kilimora Adventures</title>
+    <title>Mikumi National Park - Kilimora Adventures</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Serengeti, Migration, Safari, Tanzania" name="keywords">
-    <meta content="Experience the endless plains of Serengeti National Park and the Great Migration."
+    <meta content="Mikumi, Wildlife, Safari, National Park, Tanzania" name="keywords">
+    <meta content="Explore Mikumi National Park, Tanzania's fourth-largest national park with abundant wildlife."
         name="description">
 
     <!-- Favicon -->
@@ -349,9 +349,7 @@
                         DESTINATIONS</h6>
                     <h1 class="text-white mb-3 animated slideInDown" style="font-size: 3rem;">MIKUMI</h1>
                     <p class="fs-6 text-white mb-4 animated slideInDown">
-                        Experience Serenegeti, where the Great Migration roams wild, the sands of Zanzibar beckon, and
-                        the
-                        majestic Mount Kilimanjaro rises above it all.
+                        Explore Mikumi National Park, Tanzania's fourth-largest park with abundant wildlife and stunning landscapes.
                     </p>
                 </div>
             </div>
@@ -375,16 +373,10 @@
                     <div class="h-100">
                         <div class="d-flex align-items-center mb-4">
                             <span class="section-title-line"></span>
-                            <h2 class="mb-0">About Serengeti</h2>
+                            <h2 class="mb-0">About Mikumi</h2>
                         </div>
-                        <p class="mb-4">The Serengeti National Park is a Tanzanian national park in the Serengeti
-                            ecosystem in the Mara and Simiyu regions. It is famous for its annual migration of over 1.5
-                            million white-bearded (or brindled) wildebeest and 250,000 zebra and for its numerous Nile
-                            crocodile and honey badger.</p>
-                        <p class="mb-4">It is one of the Seven Natural Wonders of Africa. The park covers 14,750 square
-                            kilometres (5,700 sq mi) of grassland plains, savanna, riverine forest, and woodlands. The
-                            park lies in northwestern Tanzania, bordered to the north by the Kenyan border, where it is
-                            continuous with the Maasai Mara National Reserve.</p>
+                        <p class="mb-4">Mikumi National Park is Tanzania's fourth-largest national park, covering an area of 3,230 square kilometers. Located between the Uluguru Mountains and the Lumango range, the park is part of a much larger ecosystem centered on the Selous Game Reserve.</p>
+                        <p class="mb-4">The park is characterized by its Mkata Floodplain, which is often compared to the Serengeti plains due to its open horizons and abundant wildlife. Mikumi hosts buffaloes, giraffes, elephants, lions, pythons, zebras, leopards, crocodiles, and various bird species, making it an excellent destination for wildlife viewing.</p>
                     </div>
                 </div>
             </div>
@@ -402,8 +394,8 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="icon-box text-center">
                         <i class="fa fa-paw"></i>
-                        <h5>The Great Migration</h5>
-                        <p class="mb-0">Witness millions of wildebeest and zebra on their annual trek.</p>
+                        <h5>Mkata Floodplain</h5>
+                        <p class="mb-0">Open savanna plains teeming with diverse wildlife.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -416,8 +408,8 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="icon-box text-center">
                         <i class="fa fa-globe"></i>
-                        <h5>Endless Plains</h5>
-                        <p class="mb-0">Vast savannas that stretch as far as the eye can see.</p>
+                        <h5>Accessible Safari</h5>
+                        <p class="mb-0">Close proximity to Dar es Salaam makes it easily accessible.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
@@ -443,7 +435,7 @@
         <div class="container">
             <div class="d-flex align-items-center mb-5">
                 <span class="section-title-line"></span>
-                <h2 class="mb-0">Experience Serengeti's Top Tours</h2>
+                <h2 class="mb-0">Experience Mikumi's Top Tours</h2>
             </div>
             <div class="owl-carousel testimonial-carousel">
                 <!-- Tour Item 1 -->
